--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -65,42 +65,7 @@
     background-color: var(--theme-color);
     /* background-color: aqua; */
 }
-.trend-sidebar .search-container{
-    background-color: rgba(0, 0, 0, 0.65);
-    position: sticky;
-    top: 0;
-    height: 4em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-.search-container .search{
-    height: 80%;
-    width: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #202327;
-    border-radius: 2em;
-}
-.search #icon{
-    height: 1.5em;
-    width: 1.5em;
-}
-.search input{
-    height: 60%;
-    width: 80%;
-    outline: none;
-    border: 0;
-    font-size: 1em;
-    background-color: #202327;
-}
-.search.active{
-    border: 1px solid blue;
-    
-    /* background-color: aqua; */
-}
 .trend-sidebar p{
     color: #fff;
 }
@@ -130,6 +95,7 @@
     display: flex;
     /* flex-direction: column; */
     width: 100%;
+    border-bottom: 1px solid #2f3336;
     /* background-color: aqua; */
 }
 
