--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -1,117 +1,62 @@
 .tweet-box{
     display: flex;
-    flex-direction: row;
-    border: 1px solid rgb(47,51,54);
-    /* background: rgb(61, 65, 58); */
-    /* position: sticky; */
+    flex-direction: column;
+    border-bottom: 1px solid #2f3336;
 }
-.tweet-container{
-    height: fit-content;
-    /* height: 10px; */
+.tweet-avatar .vertical-line-container{
+    display: flex;
+    justify-content: center;
+    height: 100%;
     width: 100%;
-    /* background: wheat; */
+}
+.vertical-line-container .vertical-line{
+    /* width: 1px; */
+    /* margin-left: 2em; */
+    width: 1px;
+    /* height: 100%; */
+    background-color:#2f3336;
+}
+.tweet-box .tweet-container{
     display: flex;
     flex-direction: row;
-}
-.info-tweet{
-    display: flex;
-    flex-direction: column;
-    /* justify-content:space-evenly; */
-    /* background: rgb(61, 65, 58); */
-}
-.tweet-container .info-tweet .text-tweet{
-    margin-top: 1em;
-    margin-left: 0.5em;
-    color: #fff;
-}
-.tweet-container .info-tweet h3{
-    margin-top: 1em;
-    margin-left: 0.5em;
-    color: #fff;
-}
-.tweet-container .info-tweet span{
-    margin-top: 1em;
-    margin-left: 0.5em;
-    color: #fff;
-}
-.tweet-container .icons-tweet #icon-topic{
-    margin-top: 1em;
-}
-.tweet-container .icons-tweet #avatar{
-    margin-top: 1em;
-}
-.icons-tweet{
-    display: flex;
-    flex-direction: column;
-    /* background: rgb(214, 171,s 171); */
-}
-.icons-tweet #icon-topic{
-    width: 2em;
-    height: 2em;
-    border-radius: 50%;
-    background: teal;
-    align-self: flex-end;
-}
-.icons-tweet #avatar{
-    width: 4em;
-    height: 4em;
-    border-radius: 50%;
-    background: rgb(255, 0, 0);
-}
-.info-tweet .bottom-icons-tweet{
-    display: flex;
-    width: 80%;
-    justify-content: space-between;
-    /* background: springgreen; */
-    margin-top: 1em;
-    margin-bottom: 1em;
     align-self: center;
+    width: 95%;
+    /* background-color: wheat; */
+    color: #fff;
 }
-.reply-icon,.retweet-icon,.like-icon,.sent-icon{
+.tweet-container .tweet-avatar{
+    width: 4em;
+    height:4em;
+}
+.tweet-avatar img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+.tweet-container .tweet-container-details{
+    display: flex;
+    flex-direction: column;
+    /* background-color: crimson; */
+    width: 90%;
+}
+.tweet-container-details .tweet-user-info{
     display: flex;
     flex-direction: row;
-    cursor: pointer;
-    color: rgb(47,51,54);
-    /* align-items: center; */
-    /* justify-content: center; */
+    /* background-color: aqua; */
+    width: 100%;
 }
-.reply-icon #icon{
-    margin:0;
-    width: 1.5em;
-    height: 1.5em;
-    /* border-radius: 50%; */
-    /* background: rgb(255, 0, 0); */
+.tweet-container-details .tweet-icons-group{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 1em;
+    padding-bottom: 1em;
 }
-.reply-icon:hover{
-    color: rgba(29,155,240,0.1);
+.tweet-container-details .tweet-user-text{
+    padding-top: 1em;
 }
-.retweet-icon:hover{
-    color: aquamarine;
-}
-.like-icon:hover{
-    color:red;
-}
-.sent-icon:hover{
-    color:aqua;
-}
-.retweet-icon #icon{
-    margin: 0;
-    width: 1.5em;
-    height: 1.5em;
-    /* border-radius: 50%; */
-    /* background: rgb(255, 0, 0); */
-}
-.like-icon #icon{
-    margin: 0;
-    width: 1.5em;
-    height: 1.5em;
-    /* border-radius: 50%; */
-    /* background: rgb(255, 0, 0); */
-}
-.sent-icon #icon{
-    margin: 0;
-    width: 1.5em;
-    height: 1.5em;
-    /* border-radius: 50%; */
-    /* background: rgb(255, 0, 0); */
+.tweet-icons-group .reply-icon,.retweet-icon,.like-icon,.sent-icon{
+    display: flex;
+    align-items: center;
+    /* justify-content: space-between; */
 }
