--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -42,6 +42,7 @@
 .tweet-container-details .tweet-user-info{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     /* background-color: aqua; */
     width: 100%;
 }
