--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -15,7 +15,8 @@
     position:sticky;
     z-index: 10;
     top:0;
-    /* height:3000px; */
+    /* bottom: 0; */
+    /* height:4em; */
     width: 20%;
     background-color: var(--theme-color);
 }
@@ -65,7 +66,6 @@
     background-color: var(--theme-color);
     /* background-color: aqua; */
 }
-
 .trend-sidebar p{
     color: #fff;
 }
@@ -170,4 +170,32 @@
     color: #fff;
     font-weight: 400;
     font-size: 1em;
+}
+
+@media (max-width:900px){
+    .home-container .trend-sidebar{
+        display: none;
+    }
+}
+
+@media (max-width:500px){
+     .sidebar-menu-container .account-sidebar{
+        display: none;
+    }
+    .sidebar-menu-container .tweet-btn-sidebar{
+        display: none;
+    }
+    .sidebar-menu-items-container{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+    }
+    .home-container .sidebar-menu{
+        position:fixed;
+        top:auto;
+        bottom: 0;
+        height:4em;
+        width: 100%;
+        background-color: var(--theme-color);
+    }
 }
