--- a/src/components/Trends.css
+++ b/src/components/Trends.css
@@ -4,7 +4,7 @@
     background-color: #16181c;
     border-radius: 1em;
     /* padding-left: 1em; */
-    width: 80%;
+    min-width: 80%;
     /* justify-content: center; */
     align-self: center;
 }
