--- a/src/components/Mentions.css
+++ b/src/components/Mentions.css
@@ -1,9 +1,10 @@
 .mentions-box{
     display: flex;
-    width: 100%;
+    width: 95%;
+    padding-top: 1em;
     /* background-color: rgb(165, 212, 165); */
     border-top: 1px solid #2F3336;
-    border-bottom: 1px solid #2F3336;
+    /* border-bottom: 1px solid #2F3336; */
 }
 .mentions-box .mentions-container-details{
     color: #fff;
