--- a/src/components/Notifications.css
+++ b/src/components/Notifications.css
@@ -1,8 +1,15 @@
+.notifications-container{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    flex-direction: column;
+}
 .notifications-container .notifications-header{
     display: flex;
     flex-direction: column;
     justify-content:center;
     height: 6em;
+    width: 100%;
     position: sticky;
     top:0;
     background-color: rgb(0,0,0);
