--- a/src/components/Tweet.css
+++ b/src/components/Tweet.css
@@ -1,7 +1,11 @@
 .tweet-box{
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
+    justify-content: center;
     border-bottom: 1px solid #2f3336;
+}
+.tweet-box:hover{
+    cursor: pointer;
 }
 .tweet-avatar .vertical-line-container{
     display: flex;
@@ -18,9 +22,11 @@
 }
 .tweet-box .tweet-container{
     display: flex;
-    flex-direction: row;
+    /* flex-direction:column; */
     align-self: center;
+    justify-content: center;
     width: 95%;
+    margin-top: 1em;
     /* background-color: wheat; */
     color: #fff;
 }
@@ -29,13 +35,14 @@
     height:4em;
 }
 .tweet-avatar img{
-    width: 100%;
-    height: 100%;
+    width: 4em;
+    height: 4em;
     border-radius: 50%;
 }
 .tweet-container .tweet-container-details{
     display: flex;
     flex-direction: column;
+    padding-left: 1em;
     /* background-color: crimson; */
     width: 90%;
 }
@@ -55,6 +62,9 @@
 }
 .tweet-container-details .tweet-user-text{
     padding-top: 1em;
+}
+.tweet-user-text p{
+    word-wrap: break-word;
 }
 .tweet-icons-group .reply-icon,.retweet-icon,.like-icon,.sent-icon{
     display: flex;
